force-app/main/default/objects/Batch_Processing__c/Batch_Processing__c.object-meta.xml
<CustomObject>
    <label>Batch Processing</label>
    <nameField>
        <displayFormat>BP-{0000}</displayFormat>
        <label>Batch Processing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Processings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>