force-app/main/default/objects/Batch_Processing__c/fields/Method_Class__c.field-meta.xml
<CustomField>
    <fullName>Method_Class__c</fullName>
    <label>Method Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>