force-app/main/default/objects/Batch_Processing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Failed_Records__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Total_Records__c</columns>
    <columns>Type__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>