force-app/main/default/objects/Batch_Processing__c/listViews/Manual_Sharing.listView-meta.xml
<ListView>
    <fullName>Manual_Sharing</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Manual Sharing</label>
</ListView>